<resources>
    <string name="app_name">OrganizeIt</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="join_now">Join now!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="btnRegister">Register</string>
    <string name="user_name">User name</string>
    <string name="facebook_app_id">1655969407931797</string>
    <string name="fb_login_protocol_scheme">fb1655969407931797</string>
    <string name="google_id_token">857522433045-63mq14omrc5dghf1lrs6lvnp9t3pctq9.apps.googleusercontent.com</string>
    <string name="no_images_yet">No images yet!</string>
    <string name="no_folders_yet">No folders yet!</string>
    <string name="folder_name">Folder Name</string>
    <string name="add">Add</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="addphoto">AddPhoto</string>
    <string name="folder_icon">folder_icon</string>
    <string name="image">image</string>
    <string name="folder">folder</string>
    <string name="title">Title</string>
    <string name="count_images">Count images</string>
    <string name="trash">trash</string>
    <string name="logo">logo</string>
    <string name="my_folders">My folders</string>
    <string name="logout">logout</string>
    <string name="add_folder">Add Folder</string>
    <string name="big_logo">big_logo</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or">Or</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="share">share</string>
    <string name="back">back</string>

</resources>
