<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:background="@color/blue1"
        android:id="@+id/welcomeTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_weight="2"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            android:src="@mipmap/organizeit_small_logo_white"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:text="@string/my_folders"
            android:textSize="20sp"
            android:paddingLeft="10dp"

            />

        <ImageView
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_logout_black"
            android:theme="@style/customRipple"
            android:contentDescription="@string/logout" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/images_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/welcomeTop"
        android:layout_gravity="center"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="100dp"
            android:clipToPadding="false"
            />
        <TextView
            android:id="@+id/no_folders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_folders_yet"
            android:textSize="25sp"
            android:textColor="@color/dark_grey"
            android:gravity="center"
            android:visibility="gone"
            />
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnAddFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|right"
        android:text="@string/add_folder"
        android:textColor="@color/white"
        app:icon="@drawable/ic_add_folder"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/customAddButton"
        />
</RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>