<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="20"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/wave_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/small_logo_organize_it_white"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="2"
                />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_weight="15">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:weightSum="8"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_weight="3.4"
            >
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="@drawable/custom_input"
                >
            <EditText
                android:id="@+id/userEmailLogin"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:paddingLeft="40dp"
                android:paddingRight="17dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_hint"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                />
                <ImageView
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/email_dark_grey"
                    android:contentDescription="@string/email_hint" />

            </RelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="@drawable/custom_input"
                >

                <EditText
                    android:id="@+id/userPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="40dp"
                    android:paddingRight="17dp"
                    android:textSize="16sp"
                    android:textColor="@color/dark_grey"
                    android:textColorHint="@color/dark_grey"
                    android:textCursorDrawable="@drawable/cursor_color" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="11dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/password_dark_grey"
                    android:contentDescription="@string/password_hint" />
            </RelativeLayout>

            <TextView
                android:id="@+id/linkResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:autoLink="all"
                android:gravity="center_vertical"
                android:paddingLeft="17dp"
                android:text="@string/forgot_password"
                android:textColor="@color/dark_grey"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <Button
                app:backgroundTint="@null"
                android:textColor="@color/white"
                android:background="@drawable/custom_login_button"
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_weight="1.1"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/or"
                    android:textColor="@color/dark_grey"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_weight="0.8"

                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_weight="1.1"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
                <com.facebook.login.widget.LoginButton
                    android:visibility="gone"
                    xmlns:facebook="http://schemas.android.com/apk/res-auto"
                    facebook:com_facebook_login_text="YourText"
                    android:layout_width="match_parent"
                    android:id="@+id/fb_login"
                    android:layout_height="0dp"
                    android:layout_gravity="center"

                    />

            <Button
                app:backgroundTint="@null"
                android:visibility="visible"
                android:id="@+id/btnFacebook"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:drawableLeft="@drawable/ic_facebook_white"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/com_facebook_blue"
                android:textAllCaps="false"
                android:background="@drawable/custom_facebook_button"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.65"
                    android:gravity="center_vertical|right"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"
                    />

                <TextView
                    android:id="@+id/linkRegister"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1.35"
                    android:gravity="left|center_vertical"
                    android:text="@string/join_now"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            />

    </LinearLayout>

</LinearLayout>