<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="20"
    >
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        />
    <View
        android:layout_weight="0.1"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/dark_grey"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        />
    <TextView
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/testTextView"
        android:text="@string/create_new_folder"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:textColor="@color/dark_grey"

        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_weight="4"
        >
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5"
            android:layout_weight="4"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.6"
                android:background="@drawable/custom_input"
                >
                <EditText
                    android:id="@+id/txtFolderName"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:paddingLeft="40dp"
                    android:paddingRight="17dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/folder_name"
                    android:textColor="@color/dark_grey"
                    android:textColorHint="@color/dark_grey"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="14dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/ic_folder_dark_grey"
                    android:contentDescription="@string/folder_icon" />

            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3" />

            <Button
                android:id="@+id/btnAdd"
                app:backgroundTint="@null"
                android:textColor="@color/white"
                android:background="@drawable/custom_login_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.6"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textSize="16sp"
                />
        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            />
    </LinearLayout>
</LinearLayout>