<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="110dp"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:weightSum="10"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2.5dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:weightSum="5"
                android:orientation="vertical">
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    />
                <ImageView
                    android:id="@+id/myImageView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:srcCompat="@drawable/folder1_outlined"
                    android:layout_weight="2"
                    android:contentDescription="@string/folder" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.1"
                    android:gravity="bottom"
                    android:text="@string/title"
                    android:textColor="@color/dark_grey"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.9"
                    android:text="@string/count_images"
                    android:textColor="@color/dark_grey"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="5"
                >
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.8"
                    />
                <ImageView
                    android:visibility="gone"
                    android:id="@+id/btnDeleteFolder"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.4"
                    android:src="@drawable/ic_delete_folder_dark_grey"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/trash" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.8"
                    />
            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>