<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="20"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/wave_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/small_logo_organize_it_white"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/btnRegister"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="2"
                />
        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_weight="15">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:weightSum="8"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_weight="3.4"
            >
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.75"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="@drawable/custom_input"
                >
                <EditText
                    android:id="@+id/userEmailRegister"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:paddingLeft="40dp"
                    android:paddingRight="17dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_hint"
                    android:textColor="@color/dark_grey"
                    android:textColorHint="@color/dark_grey"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    />
                <ImageView
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/email_dark_grey"
                    android:contentDescription="@string/email_hint" />
            </RelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="@drawable/custom_input"
                >

                <EditText
                    android:id="@+id/userPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="40dp"
                    android:paddingRight="17dp"
                    android:textSize="16sp"
                    android:textColor="@color/dark_grey"
                    android:textColorHint="@color/dark_grey"
                    android:textCursorDrawable="@drawable/cursor_color" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="11dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/password_dark_grey"
                    android:contentDescription="@string/password_hint" />
            </RelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="@drawable/custom_input"
                >

                <EditText
                    android:id="@+id/userConfirmPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="40dp"
                    android:paddingRight="17dp"
                    android:textSize="16sp"
                    android:textColor="@color/dark_grey"
                    android:textColorHint="@color/dark_grey"
                    android:textCursorDrawable="@drawable/cursor_color" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="11dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/password_dark_grey"
                    android:contentDescription="@string/password_hint" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />
            <Button
                android:id="@+id/btnRegister"
                app:backgroundTint="@null"
                android:textColor="@color/white"
                android:background="@drawable/custom_login_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:text="@string/btnRegister"
                android:textAllCaps="false"
                android:textSize="16sp"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.95"
                    android:gravity="center_vertical|right"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/linkLogin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.05"
                    android:gravity="center_vertical|left"
                    android:layout_marginLeft="5dp"
                    android:text="@string/login"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>